<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.andralung.musicalapp.activities.Store">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_between_related_view"
        android:layout_marginRight="@dimen/margin_between_related_view"
        android:layout_marginTop="111dp"
        android:gravity="center"
        android:text="@string/shop_functionality"
        android:textSize="15sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="316dp"
        android:layout_height="35dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/search_for_album"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageView
        android:layout_width="34dp"
        android:layout_height="35dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="@dimen/margin_between_related_view"
        android:layout_marginRight="@dimen/margin_between_related_view"
        android:src="@drawable/ic_search_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textView7" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_between_related_view"
        android:layout_marginRight="@dimen/margin_between_related_view"
        android:layout_marginTop="16dp"
        android:hint="@string/here"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_between_related_view"
        android:layout_marginRight="@dimen/margin_between_related_view"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:id="@+id/button_home"
        android:text="HOME"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="75dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="@dimen/margin_between_related_view"
        android:layout_marginTop="@dimen/margin_between_related_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/imageView5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.951"
        app:srcCompat="@drawable/gold_256" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="80dp"
        android:layout_height="75dp"
        android:layout_marginBottom="@dimen/margin_between_related_view"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="@dimen/margin_between_related_view"
        android:layout_marginTop="@dimen/margin_between_related_view"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintLeft_toRightOf="@+id/imageView11"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gold_256" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="80dp"
        android:layout_height="75dp"
        android:layout_marginBottom="@dimen/margin_between_related_view"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="@dimen/margin_between_related_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.951"
        app:srcCompat="@drawable/gold_256" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="80dp"
        android:layout_height="75dp"
        android:layout_marginBottom="@dimen/margin_between_related_view"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="@dimen/margin_between_related_view"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintLeft_toRightOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gold_256" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="80dp"
        android:layout_height="75dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="@dimen/margin_between_related_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.951"
        app:srcCompat="@drawable/gold_256" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="80dp"
        android:layout_height="75dp"
        android:layout_marginBottom="@dimen/margin_between_related_view"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="@dimen/margin_between_related_view"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintLeft_toRightOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gold_256" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="80dp"
        android:layout_height="75dp"
        android:layout_marginBottom="@dimen/margin_between_related_view"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="@dimen/margin_between_related_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.95"
        app:srcCompat="@drawable/gold_256" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="80dp"
        android:layout_height="75dp"
        android:layout_marginBottom="@dimen/margin_between_related_view"
        android:layout_marginLeft="@dimen/margin_between_related_view"
        android:layout_marginTop="@dimen/margin_between_related_view"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gold_256" />


</android.support.constraint.ConstraintLayout>
